# EmulStick-GUI

./: .gitignore  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: windows-build.yml
docs/: ble-protocol.md  plan.md  protocol.md  release.md
scripts/: gen-icon.cjs  sign-and-run.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ble/: mod.rs
src-tauri/src/input/: mod.rs  platform.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
src-tauri/src/protocol/: keyboard.rs  keymap.rs  mod.rs  mouse.rs
src/lib/: VideoFeed.svelte  ipc.ts  types.ts
